---------------------------

- Added ice_communicator() to proxies. This function returns
  the communicator that was used to create the proxy.

- Added ice_toString() to proxies. This function returns
  the stringified proxy. This function can be more convenient
  to use than communicator->stringToProxy() because you do
  not need the communicator to stringify a proxy that way.

- IceUtil/Config.h no longer includes winsock.h under WIN32. Ice can
  now build with WIN32_LEAN_AND_MEAN.

- Removed operator timeval() from IceUtil::Time for WIN32.

- Parsing a stringified proxy no longer completely fails if the proxy 
  contains an endpoint type which is unknown to the Ice runtime as long
  as the proxy contains other endpoints which are known. A warning is 
  printed for the unknown types that are encountered.

- Ice::Object is now an abstract class that cannot be instantiated.
  This change should be transparent to application code.

- For abstract classes, ice_clone() now throws a CloneNotImplementedException
  if the concrete implementation class does not override ice_clone().
  (Previously, ice_clone() incorrectly sliced the cloned abstract class to
  the most derived-concrete class or Ice::Object.)

Changes since version 2.1.1
---------------------------

TODO: This must be split: Some of the changes were done since version
2.1.1, some were done since version 2.1.2.

- Fixed a bug with dynamic thread pools, where new threads were
  destroyed immediately after dispatch if <threadpool>.Size=1 and
  <threadpool>.SizeMax > 1.

- Added new features to the C++ mapping:

  - Structures, classes, and exceptions now have one-shot constructors.
    For example, for a class

      class Example {
          int i;
	  string s;
      };

    the following constructors are generated:

      class Example {
	  Example();
	  Example(::Ice::Int, const ::std::string&);
	  // ...
      };

    This allows you to construct a structure, class, or exception